Added backup stuff

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
         <div id = "printerGrid"></div>
         <!--Loading text that will be displayed while printer data is being fetched.-->
         <div id="loading" style="display: block;">(Fetching printer data...)</div>
+        <div id="showBackupDiv">
+            <button id="showBackupButton"><i class="fas fa-database"></i> Show Backup</button>
+        </div>
 
         <!-- Firebase stuff -->
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
