Added backup to titlebar, and some more info in the tab

--- a/backup/index.html
+++ b/backup/index.html
@@ -22,12 +22,13 @@
                 <ul class = "navbar">
                     <li><a class = "navelement" href="/makerspacedashboard/oppsett">Oppsett</a></li>
                     <li><a class = "navelement" href="/makerspacedashboard/cura">Cura</a></li>
+                    <li><a class = "navelement" href="/makerspacedashboard/backup">Backup</a></li>
                     <li><a id = "title" class = "navelement selected" href="/makerspacedashboard">Makerspace Dashboard</a></li>
                     <li><a class = "navelement" id = "octofarmButton" href="http://192.168.3.101:3069/" target="_blank">Octofarm <i class="fas fa-external-link-alt"></i></a></li>
                 </ul>
             </nav>
         </div>
-
+        <p id = "infotext">Om databasen er nede kan du bruke 'Backup'. Dataen lagres på nettsiden så den er ikke nødvendigvis helt oppdatert.</p>
         <input type="text" id="searchInput" onkeyup="searchFunction(this.value)" placeholder="Søk etter posisjonskode eller adresse...">
 
         <!--Printer div-->
