--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <ul class = "navbar">
                     <li><a class = "navelement" href="/makerspacedashboard/oppsett">Oppsett</a></li>
                     <li><a class = "navelement" href="/makerspacedashboard/cura">Cura</a></li>
+                    <li><a class = "navelement" href="/makerspacedashboard/backup">Backup</a></li>
                     <li><a id = "title" class = "navelement selected" href="/makerspacedashboard">Makerspace Dashboard</a></li>
                     <li><a class = "navelement" id = "octofarmButton" href="http://192.168.3.101:3069/" target="_blank">Octofarm <i class="fas fa-external-link-alt"></i></a></li>
                 </ul>
