--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <script src="js/mainsite.js" defer></script>
+        <script src="js/dashboard.js" defer></script>
         <script src="js/sitewide.js" defer></script>
         <script src="js/progress.js"></script>
         
@@ -43,7 +44,7 @@
 
         <!--3D Printere-->
         <!--Search field-->
-        <input type="text" id="searchInput" onkeyup="searchFunction(this.value)" placeholder="Søk etter printer, model, status, posisjon eller adresse (Ctrl + K)">
+        <input type="text" id="searchInput" onkeyup="applySearchFilter(this.value)" placeholder="Søk etter printer, model, status, posisjon eller adresse (Ctrl + K)">
         <div class="underSearchDiv">
             <button id = "switchDisplayBTN" onclick="switchDisplay()">
                 Switch to tableview
@@ -63,23 +64,22 @@
             </p>
         </div>
         <!--Printer tabel-->
-        <table id="printerTable" style = "display: none;">
-            <thead id="printerTableHeader">
-            <tr><th>Navn <span class="sortable" onclick="sortTable(0, event)">&uarr;</span></th>
-                <th>Model <span class="sortable" onclick="sortTable(1, event)">&uarr;</span></th>
-                <th>Adresse <span class="sortable" onclick="sortTable(2, event)">&uarr;</span></th>
-                <th>Status <span class="sortable" onclick="sortTable(3, event)">&uarr;</span></div></th></tr>
-            </thead>
-            <tbody id="printerTableBody">
-            </tbody>
-        </table>
-        <!--Printer div-->
-        <div id = "printerGrid"></div>
+        <div id = "dashboard">
+            <table id="printerTable" style = "display: none;">
+                <thead id="printerTableHeader">
+                <tr><th>Navn <span class="sortable" onclick="sortTable(0, event)">&uarr;</span></th>
+                    <th>Model <span class="sortable" onclick="sortTable(1, event)">&uarr;</span></th>
+                    <th>Adresse <span class="sortable" onclick="sortTable(2, event)">&uarr;</span></th>
+                    <th>Status <span class="sortable" onclick="sortTable(3, event)">&uarr;</span></div></th></tr>
+                </thead>
+                <tbody id="printerTableBody">
+                </tbody>
+            </table>
+            <!--Printer div-->
+            <div id = "printerGrid"></div>
+        </div>
         <!--Loading text that will be displayed while printer data is being fetched.-->
         <div id="loading" style="display: block;">(Fetching printer data...)</div>
-        <div id="showBackupDiv">
-            <button id="showBackupButton"><i class="fas fa-database"></i> Show Backup</button>
-        </div>
 
         <!-- Firebase stuff -->
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
