Gjorde nettsiden mer brukervenlig

--- a/cura/index.html
+++ b/cura/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"></html>
-<html>
+<html lang="no">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,10 +50,10 @@
         <div style="padding-left: 1%;">
             <p>For å bruke dem start med å laste ned og installere <a href="https://ultimaker.com/software/ultimaker-cura/" target="_blank">Cura</a>.</p>
             <p>Så søker du etter '%appdata%' og åpner den mappa.</p>
-            <img src="../assets/imgs/appdata.png" alt="appdata" class="expIMG">
+            <img src="../assets/imgs/appdata.png" alt="Bilde av en som søker etter %AppData% mappa i Windows." class="expIMG">
             
             <p>Gå så inn i mappen med navnet 'cura'. Inne i cura mappa skal det være mapper til hver av cura versjonene du har installert, i dette tilfelle er versjon 5.5 og 5.6 installert.</p>
-            <img src="../assets/imgs/curafolder.png" alt="curaFolder" class="expIMG">
+            <img src="../assets/imgs/curafolder.png" alt="Bilde av Cura mappen inne i %AppData% mappa." class="expIMG">
             
             <p >Pakk ut zip filen du lastet ned i sted <a style = "color: white" href="#undertitle">(knappene ovenfor)</a> og bytt ut mappen med samme navn (versjon) i cura mappa.<br>Eksempel: Skulle jeg brukt cura versjon 5.5 ville jeg slettet mappen med navn '5.5', for og så flytte mappen jeg lastet ned og pakket ut inn i cura mappa.</p>
 
@@ -62,7 +61,7 @@
 
             <p>Når du har gjort dette kan du starte cura og velge en av printerne fra listen.</p>
 
-            <img src="../assets/imgs/printere.png" alt="cura" class="expIMG">
+            <img src="../assets/imgs/printere.png" alt="Bilde av Cura med alle printerne lagt til." class="expIMG">
         </div>
 
         <!--Footer-->
