--- a/oppsett/index.html
+++ b/oppsett/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="no">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +37,7 @@
         <p>Innlogging Octoprint: <span style="font-weight: bold;">Brukernavn: 'Makerspace' Passord: 'user'</span></p>
         </div>
         
-        <img src="../assets/imgs/MSDForklaring.png" alt="Forklaring av hva infoen på grid tilesa betyr." class="expIMG">
+        <img src="../assets/imgs/MSDForklaring.png" alt="Forklaring av hva infoen på grid elementene til 3D-Printerne betyr." class="expIMG">
 
         <!--Footer-->
         <footer>
