Small stray code btis removed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                 <tr><th>Navn <span class="sortable" onclick="sortTable(0, event)">&uarr;</span></th>
                     <th>Model <span class="sortable" onclick="sortTable(1, event)">&uarr;</span></th>
                     <th>Adresse <span class="sortable" onclick="sortTable(2, event)">&uarr;</span></th>
-                    <th>Status <span class="sortable" onclick="sortTable(3, event)">&uarr;</span></div></th></tr>
+                    <th>Status <span class="sortable" onclick="sortTable(3, event)">&uarr;</span></th>
+                </tr>
                 </thead>
                 <tbody id="printerTableBody">
                 </tbody>
@@ -95,7 +96,7 @@
         <!--Footer-->
         <footer>
             <div id="footerDiv">
-                <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com", target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/", target = "_blank">Anders</a></p>
+                <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com" target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/" target = "_blank">Anders</a></p>
             </div>
         </footer>
 
