--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link type="text/css" href="mainsite.css" rel="stylesheet"> 
         <!-- Add Font Awesome CDN link -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet"/>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
         <!-- Add Favicon -->
         <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     </head>
