--- a/cura/index.html
+++ b/cura/index.html
@@ -46,7 +46,7 @@
             <i class="fas fa-download"></i> Cura 5.6
         </a>
         
-        <hr color="#232323">
+        <hr>
         <div style="padding-left: 1%;">
             <p>For å bruke dem start med å laste ned og installere <a href="https://ultimaker.com/software/ultimaker-cura/" target="_blank">Cura</a>.</p>
             <p>Så søker du etter '%appdata%' og åpner den mappa.</p>
@@ -67,7 +67,7 @@
         <!--Footer-->
         <footer>
             <div id="footerDiv">
-                <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com", target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/", target = "_blank">Anders</a></p>
+                <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com" target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/" target = "_blank">Anders</a></p>
             </div>
         </footer>
 
