--- a/oppsett/index.html
+++ b/oppsett/index.html
@@ -32,7 +32,7 @@
         <!--Oppsett-->
         <div style="padding-left: 1%;">
         <h2 style="text-decoration: underline;">Oppsett</h2>
-        <p>For å kunne printe tråløst må du koble deg til 3D-printer wifinettverket, passordet til dette kan du skaffe fra en lærer/ansatt til skaperverkstedet.<p>
+        <p class = "test">For å kunne printe tråløst må du koble deg til 3D-printer wifinettverket, passordet til dette kan du skaffe fra en lærer/ansatt til skaperverkstedet.<p>
         <p>Så klikker du på en av linkene i dashboard tabbet for å begynne å bruke Octoprint.</p>
         <p>Innlogging Octoprint: <span style="font-weight: bold;">Brukernavn: 'Makerspace' Passord: 'user'</span></p>
         </div>
@@ -42,13 +42,13 @@
         <!--Footer-->
         <footer>
             <div id="footerDiv">
-                <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com", target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/", target = "_blank">Anders</a></p>
+                <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com" target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/" target = "_blank">Anders</a></p>
             </div>
         </footer>
+        <style>
+            p, h2 {
+                color: white;
+            }
+        </style>
     </body>
-    <style>
-        p, h2 {
-            color: white;
-        }
-    </style>
 </html>
