--- a/backup/index.html
+++ b/backup/index.html
@@ -39,7 +39,7 @@
         <!--Footer-->
         <footer>
             <div id="footerDiv">
-                <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com", target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/", target = "_blank">Anders</a></p>
+                <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com" target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/" target = "_blank">Anders</a></p>
             </div>
         </footer>
     </body>
