Some small bugfixes in oppsett

--- a/oppsett/index.html
+++ b/oppsett/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Makerspace Dashboard: Oppsett</title>
         <link type="text/css" href="../mainsite.css" rel="stylesheet"> 
-        <link type="text/css" href="/oppsett.css" rel="stylesheet"> 
+        <link type="text/css" href="oppsett.css" rel="stylesheet"> 
         <!-- Add Font Awesome CDN link -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     </head>
@@ -45,10 +45,5 @@
                 <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com" target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/" target = "_blank">Anders</a></p>
             </div>
         </footer>
-        <style>
-            p, h2 {
-                color: white;
-            }
-        </style>
     </body>
 </html>
