La til adversel rundt Cura print profilene

--- a/cura/index.html
+++ b/cura/index.html
@@ -32,7 +32,7 @@
         <h2 style="text-decoration: underline; padding-left: 1%;" id="undertitle">Cura printer profiler</h2>
 
         <p style="padding-left: 1%;">Her kan du laste ned set med Ultimaker Cura print profiler til skaperverkstedets 3D-printere.</p>
-        
+        <p style="padding-left: 1%;">(OBS! Disse er ikke oppdatert til det nye systemet med plasseringskoder, feil og mangler kan forekomme.)</p>
         <a class="curaDownloadBTN" href="../curaPrinterProfiler/4.7.zip" download style="margin-left: 1%;">
             <i class="fas fa-download"></i> Cura 4.7
         </a>
@@ -67,7 +67,7 @@
         <!--Footer-->
         <footer>
             <div id="footerDiv">
-                <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com" target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/" target = "_blank">Anders</a></p>
+                <p class="footerText">Medvirkende: <a class="footerText" href="https://github.com/trymbf" target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/" target = "_blank">Anders</a></p>
             </div>
         </footer>
 
