--- a/backup/index.html
+++ b/backup/index.html
@@ -4,8 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Makerspace Dashboard: Backup</title>
-        <link type="text/css" href="../mainsite.css" rel="stylesheet"> 
+        <!-- Sitewide styles -->
+        <link type="text/css" href="../style/mainsite.css" rel="stylesheet"> 
+
+        <!-- Printergrid -->
+        <link rel="stylesheet" href="../style/printergrid.css">
+        <link rel="stylesheet" href="../style/printercard.css">
+
+        <!-- Other styles -->
         <link type="text/css" href="backup.css" rel="stylesheet"> 
+        
         <!-- Add Font Awesome CDN link -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     </head>
