--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Makerspace Dashboard</title>
-        <link type="text/css" href="mainsite.css" rel="stylesheet"> 
+        <!-- Sitewide css -->
+        <link type="text/css" href="style/mainsite.css" rel="stylesheet"> 
+        <!-- Printergrid css-->
+        <link type="text/css" href="style/printermodal.css" rel="stylesheet">
+        <link rel="stylesheet" href="style/printercard.css" rel="stylesheet">
+        <link rel="stylesheet" href="style/printergrid.css" rel="stylesheet">
+        <link rel="stylesheet" href="style/printertable.css" rel="stylesheet">
+
         <!-- Add Font Awesome CDN link -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
