Small UI improvements

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div id="bottomBanner">
             <p id="updatedAutoTextBottomBar">
-                Updates automatically <i class="fas fa-check"></i> <!-- Checkmark icon -->
+                Updating automatically <i class="fas fa-check"></i> <!-- Checkmark icon -->
             </p>
         </div>
         
