--- a/cura/index.html
+++ b/cura/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Makerspace Dashboard: Cura</title>
-        <link type="text/css" href="../mainsite.css" rel="stylesheet"> 
+        <link type="text/css" href="../style/mainsite.css" rel="stylesheet"> 
         <link type="text/css" href="cura.css" rel="stylesheet">
         <!-- Add Font Awesome CDN link -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
